<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvSkip">Пропустить</string>
    <string name="get_started">Начать работу</string>
    <string name="note">Заметки</string>
    <string name="confirm">Подтвердить</string>
    <string name="send_code">Получить код</string>
    <string name="your_code">Ваш код</string>
    <string name="phone">+996 707 777 777</string>
    <string name="sign_up">Регистрация по номеру</string>
    <string name="google">Продолжить через Google</string>
    <string name="default_web_client_id">1058783115734-4incjfb9k5dp663e5d03ge1p80edf0aq.apps.googleusercontent.com</string>
</resources>